--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body class="em_body" style="margin:0px auto; padding:0px;" >
-    <iframe src="https://pascxstriver.mojo.page/pasc-arsh-session" title="Payments Page" style></iframe>
+    <iframe src="https://arshsession.mojo.page/pasc-arsh-session" title="Payments Page" style></iframe>
 </body>
 
 </html>
